# GameOfLife

GameOfLife/: README.md
GameOfLife/final/: CMakeLists.txt  ctest.c  main.c  main_sdl.c
GameOfLife/final/console/: CMakeLists.txt  drawer.c  drawer.h
GameOfLife/final/game/: CMakeLists.txt  game.c  game.h
GameOfLife/final/game_sdl/: game_sdl.h
GameOfLife/final/grids/: grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt  grid7.txt  grid8.txt  grid9.txt
GameOfLife/step1/: Makefile  doc.txt  doxygen  drawer.c  drawer.h  game.c  game.h  main.c  version1.tar.xz
GameOfLife/step2/: main.c
GameOfLife/step2/console/: drawer.c  drawer.h
GameOfLife/step2/game/: CMakeLists.txt  game.c  game.h
GameOfLife/step3/: CMakeLists.txt  main.c
GameOfLife/step3/console/: drawer.c
GameOfLife/step3/game/: game.c  game.h
GameOfLife/step4/: CMakeLists.txt  main_sdl.c
GameOfLife/step4/game_sdl/: CMakeLists.txt  Makefile  cmake_install.cmake  game_sdl.c
